tests/parser/errors/empty_slice.mochi
let xs = [1, 2]
let y = xs[:]
